<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextOldPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="4"
        android:inputType="numberPassword"
        android:hint="@string/old_pin_hint" />

    <EditText
        android:id="@+id/editTextNewPin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="4"
        android:inputType="numberPassword"
        android:hint="@string/new_pin_hint"/>

    <EditText
        android:id="@+id/editTextNewPin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="4"
        android:inputType="numberPassword"
        android:hint="@string/new_pin_check_hint"/>

    <Button
        android:id="@+id/buttonModifyPin"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="31dp"
        android:text="@string/change_pin" />

</LinearLayout>