<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkbox_date_movements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:checked="true"
        android:text="@string/filter_date_movements" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <DatePicker
            android:id="@+id/calendar_movement_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:calendarViewShown="true"
            android:firstDayOfWeek="2" />

        <DatePicker
            android:id="@+id/calendar_movement_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="true"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:firstDayOfWeek="2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkbox_in_movements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|start"
            android:checked="true"
            android:text="@string/movements_in" />

        <CheckBox
            android:id="@+id/checkbox_out_movements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|start"
            android:checked="true"
            android:text="@string/movements_out" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_movements"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>